k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: construction-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: locleon123/backend-latest:latest # Твой образ в Docker Hub
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        
        # === ПЕРЕМЕННЫЕ ОКРУЖЕНИЯ ===
        volumeMounts:
        - name: storage
          mountPath: /app/storage # Должно совпадать со STORAGE_ROOT, если он не абсолютный
        
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
            
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30 # Увеличил, чтобы дать время на миграцию БД
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5

      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: backend-storage-pvc
