k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: construction-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 176.108.250.251 # Или твой домен
    http:
      paths:
      # Фронтенд (все остальное)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      
      # Бэкенд API
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /foreman
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /inspector
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /issues
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
